# DrinkBar

./: .gitignore  .qmlls.ini  CMakeLists.txt  DrinkListScreen.qml  GirlAva.qml  HotColdSelectScreen.qml  Main.qml  README.md  SideSelectScreen.qml  justfile.cpp  justfile.h  main.cpp  testqml.cpp  testqml.h
Ui/assets/: AllDrinks.json
Ui/items/: DrinkCustomItem.qml
